# Openenv-Hackathon

./: Dockerfile  README.md  __init__.py  client.py  env.py  inference.py  openenv.yaml  pyproject.toml  tree.txt  validate-submission.sh
my_env/: client.py  models.py  openenv.yaml
my_env/server/: __init__.py  my_env_environment.py  requirements.txt
server/: app.py  my_env_environment.py
sre_triage_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
